# basic-cfd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plot.py
examples/: advection_1d.cpp
include/: advection_equation_solver_1d.hpp  file_writer.hpp  first_order_upwind_scheme_1d.hpp  ftcs_scheme.hpp  ftcs_scheme_1d.hpp  harten_yee_tvd_scheme_1d.hpp  lax_scheme.hpp  lax_scheme_1d.hpp  lax_wendroff_scheme.hpp  lax_wendroff_scheme_1d.hpp  muscl_tvd_scheme_1d.hpp  second_order_upwind_scheme_1d.hpp  upwind_scheme.hpp  upwind_scheme_1d.hpp
src/: advection_1d.cpp  ftcs_scheme.cpp  lax_scheme.cpp  lax_wendroff_scheme.cpp  upwind_scheme.cpp
